Format all elon`s data

--- a/Elon Musk chat finetune/elon_bot.ipynb
+++ b/Elon Musk chat finetune/elon_bot.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -51,85 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Lex Fridman:</td>\n",
-       "      <td>The following is a conversation with Elon Musk...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Lex Fridman:</td>\n",
-       "      <td>As scientists and engineers, most of us don't ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Lex Fridman:</td>\n",
-       "      <td>This work promises to help treat neurobiologic...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Lex Fridman:</td>\n",
-       "      <td>And now as an anonymous YouTube commentary ref...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Lex Fridman:</td>\n",
-       "      <td>Let's start with an easy question about consci...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              0                                                  1\n",
-       "0  Lex Fridman:  The following is a conversation with Elon Musk...\n",
-       "1  Lex Fridman:  As scientists and engineers, most of us don't ...\n",
-       "2  Lex Fridman:  This work promises to help treat neurobiologic...\n",
-       "3  Lex Fridman:  And now as an anonymous YouTube commentary ref...\n",
-       "4  Lex Fridman:  Let's start with an easy question about consci..."
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lex.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,112 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "id": "RXdJTSVwWGHj"
    },
    "outputs": [],
    "source": [
-    "joe = pd.read_csv('data/joe_elon_qa.txt',header=None, engine=\"python\", delimiter=\",\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 238
-    },
-    "id": "h6kGx-9eG7qA",
-    "outputId": "bd2efe43-1e50-4716-81a2-bf15a3dd03bd"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>{\"prompt\": \"Ah, ha, ha, ha. Four, three, two, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>{\"prompt\": \"It's very good to meet you.\", \"com...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>{\"prompt\": \"And thanks for not lighting this p...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>{\"prompt\": \"How does one, just in the middle o...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>{\"prompt\": \"Now, who-\", \"completion\": \"And the...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   0\n",
-       "0  {\"prompt\": \"Ah, ha, ha, ha. Four, three, two, ...\n",
-       "1  {\"prompt\": \"It's very good to meet you.\", \"com...\n",
-       "2  {\"prompt\": \"And thanks for not lighting this p...\n",
-       "3  {\"prompt\": \"How does one, just in the middle o...\n",
-       "4  {\"prompt\": \"Now, who-\", \"completion\": \"And the..."
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "with open('data/joe_elon_qa.txt', 'r') as f:\n",
+    "    data = f.read().split('\\n')[:-1]\n",
+    "\n",
+    "df = pd.read_json('[' + ','.join(data) + ']')\n",
+    "\n",
+    "joe = pd.DataFrame({\n",
+    "    'instruction': df['prompt'],\n",
+    "    'output': df['completion']\n",
+    "})\n",
     "joe.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dropping first col\n",
-    "del joe['Timestamp']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "joe.drop(joe[joe.Text == \"Yeah.\"].index, inplace = True)\n",
-    "joe.drop(joe[joe.Text == \"Yes.\"].index, inplace = True)"
    ]
   },
   {
@@ -298,7 +139,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clubhouse.drop(clubhouse.columns[[0, 1]], axis = 1, inplace = True)"
+    "clubhouse.drop(clubhouse.columns[[0, 1]], axis = 1, inplace = True)\n",
+    "clubhouse.head(10)"
    ]
   },
   {
@@ -308,7 +150,7 @@
    "outputs": [],
    "source": [
     "# concatenate dfs\n",
-    "convo = pd.concat([lex, joe, clubhouse], ignore_index = True)"
+    "convo = pd.concat([lex, clubhouse], ignore_index = True)"
    ]
   },
   {
@@ -319,7 +161,7 @@
    },
    "outputs": [],
    "source": [
-    "convo.sample(10)"
+    "convo.tail(10)"
    ]
   },
   {
@@ -381,18 +223,69 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 380
-    },
-    "id": "NGy0MxMQVIAP",
-    "outputId": "08b7f0eb-6a38-4b83-efdc-e53778d7547a"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "trn_df, val_df = train_test_split(df, test_size=0.05)\n",
-    "trn_df.head()"
+    "# 使用 apply 方法将 context 和 response 数据填入到指定格式\n",
+    "df['example'] = df.apply(lambda x: {'instruction': x['context'], 'input': '', 'output': x['response']}, axis=1)\n",
+    "df['example'] = df['example'].apply(str)\n",
+    "\n",
+    "# 将结果存储到新的列中\n",
+    "new_df = pd.DataFrame({\n",
+    "    'example': df['example']\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 使用 apply 方法将 context 和 response 数据填入到指定格式\n",
+    "joe['example'] = joe.apply(lambda x: {'instruction': x['instruction'], 'input': '', 'output': x['output']}, axis=1)\n",
+    "joe['example'] = joe['example'].apply(str)\n",
+    "\n",
+    "# 将结果存储到新的列中\n",
+    "joe_df = pd.DataFrame({\n",
+    "    'example': joe['example']\n",
+    "})\n",
+    "joe_df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 合并两个数据帧\n",
+    "trn_df = pd.concat([new_df, joe_df], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 将数据帧转换为字典列表\n",
+    "import json\n",
+    "\n",
+    "data = trn_df.to_dict(orient='records')\n",
+    "\n",
+    "# 导出字典列表为 JSON 文件\n",
+    "with open('elon_trn_data.json', 'w') as f:\n",
+    "    json.dump(data, f)"
    ]
   }
  ],
