improve the format

--- a/Elon Musk chat finetune/elon_bot.ipynb
+++ b/Elon Musk chat finetune/elon_bot.ipynb
@@ -227,22 +227,11 @@
    "outputs": [],
    "source": [
     "# 使用 apply 方法将 context 和 response 数据填入到指定格式\n",
-    "df['example'] = df.apply(lambda x: {'instruction': x['context'], 'input': '', 'output': x['response']}, axis=1)\n",
+    "df['example'] = df.apply(lambda x: {\"instruction\": x['context'], \"input\": '', \"output\": x['response']}, axis=1)\n",
     "df['example'] = df['example'].apply(str)\n",
     "\n",
     "# 将结果存储到新的列中\n",
-    "new_df = pd.DataFrame({\n",
-    "    'example': df['example']\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_df.sample(5)"
+    "new_df = df['example'].to_list()"
    ]
   },
   {
@@ -252,14 +241,11 @@
    "outputs": [],
    "source": [
     "# 使用 apply 方法将 context 和 response 数据填入到指定格式\n",
-    "joe['example'] = joe.apply(lambda x: {'instruction': x['instruction'], 'input': '', 'output': x['output']}, axis=1)\n",
+    "joe['example'] = joe.apply(lambda x: {\"instruction\": x['instruction'], \"input\": '', \"output\": x['output']}, axis=1)\n",
     "joe['example'] = joe['example'].apply(str)\n",
     "\n",
     "# 将结果存储到新的列中\n",
-    "joe_df = pd.DataFrame({\n",
-    "    'example': joe['example']\n",
-    "})\n",
-    "joe_df.sample(5)"
+    "joe_df = joe['example'].to_list()"
    ]
   },
   {
@@ -269,7 +255,7 @@
    "outputs": [],
    "source": [
     "# 合并两个数据帧\n",
-    "trn_df = pd.concat([new_df, joe_df], ignore_index=True)"
+    "trn_df = new_df+joe_df\n"
    ]
   },
   {
@@ -281,11 +267,9 @@
     "# 将数据帧转换为字典列表\n",
     "import json\n",
     "\n",
-    "data = trn_df.to_dict(orient='records')\n",
-    "\n",
-    "# 导出字典列表为 JSON 文件\n",
-    "with open('elon_trn_data.json', 'w') as f:\n",
-    "    json.dump(data, f)"
+    "# 导出每行数据为 JSON 文件\n",
+    "with open('data.json', 'w') as f:\n",
+    "    f.write(json.dumps(trn_df))"
    ]
   }
  ],
