--- a/Elon Musk chat finetune/elon_bot.ipynb
+++ b/Elon Musk chat finetune/elon_bot.ipynb
@@ -150,17 +150,7 @@
    "outputs": [],
    "source": [
     "# concatenate dfs\n",
-    "convo = pd.concat([lex, clubhouse], ignore_index = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
+    "convo = pd.concat([lex, clubhouse], ignore_index = True)\n",
     "convo.tail(10)"
    ]
   },
@@ -200,23 +190,7 @@
     "columns = ['response', 'context'] \n",
     "columns = columns + ['context/' + str(i) for i in range(n - 1)]\n",
     "\n",
-    "df = pd.DataFrame.from_records(contexted, columns=columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 446
-    },
-    "id": "4T5OlNZHUxij",
-    "outputId": "895603a6-ca02-4301-c4b0-5bccbee8a3b8",
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
+    "df = pd.DataFrame.from_records(contexted, columns=columns)\n",
     "df.sample(5)"
    ]
   },
@@ -226,12 +200,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 使用 apply 方法将 context 和 response 数据填入到指定格式\n",
-    "df['example'] = df.apply(lambda x: {\"instruction\": x['context'], \"input\": '', \"output\": x['response']}, axis=1)\n",
-    "df['example'] = df['example'].apply(str)\n",
-    "\n",
-    "# 将结果存储到新的列中\n",
-    "new_df = df['example'].to_list()"
+    "data = []\n",
+    "# 使用 for 循环轮询 DataFrame 中的行\n",
+    "for index,row in df.iterrows():\n",
+    "    # 处理每一行\n",
+    "    item = {\n",
+    "        \"instruction\":row['context'],\n",
+    "        \"input\":\"\",\n",
+    "        \"output\":row['response']\n",
+    "    }\n",
+    "    data.append(item)"
    ]
   },
   {
@@ -240,36 +218,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 使用 apply 方法将 context 和 response 数据填入到指定格式\n",
-    "joe['example'] = joe.apply(lambda x: {\"instruction\": x['instruction'], \"input\": '', \"output\": x['output']}, axis=1)\n",
-    "joe['example'] = joe['example'].apply(str)\n",
-    "\n",
-    "# 将结果存储到新的列中\n",
-    "joe_df = joe['example'].to_list()"
+    "for index,row in joe.iterrows():\n",
+    "    # 处理每一行\n",
+    "    item = {\n",
+    "        \"instruction\":row['instruction'],\n",
+    "        \"input\":\"\",\n",
+    "        \"output\":row['output']\n",
+    "    }\n",
+    "    data.append(item)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 合并两个数据帧\n",
-    "trn_df = new_df+joe_df\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 将数据帧转换为字典列表\n",
     "import json\n",
     "\n",
-    "# 导出每行数据为 JSON 文件\n",
-    "with open('data.json', 'w') as f:\n",
-    "    f.write(json.dumps(trn_df))"
+    "with open('data.json', 'w',encoding=\"utf-8\") as f:\n",
+    "    json.dump(data,f,ensure_ascii=False,indent=2)"
    ]
   }
  ],
